objects/Contact_Update_Record__c.object
<CustomObject>
    <description>This object is used to store info of modification</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Update Records</relationshipLabel>
        <relationshipName>Contact_Update_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Changed__c</fullName>
        <label>Field Changed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CheckDeliveryMethod__c</fullName>
                </value>
                <value>
                    <fullName>Birthdate</fullName>
                </value>
                <value>
                    <fullName>PayrollNumber__c</fullName>
                </value>
                <value>
                    <fullName>Fed_Filing_Status__c</fullName>
                </value>
                <value>
                    <fullName>State_1_Filing_Status__c</fullName>
                </value>
                <value>
                    <fullName>StateFilingExtras__c</fullName>
                </value>
                <value>
                    <fullName>State_2_Filing_Status__c</fullName>
                </value>
                <value>
                    <fullName>StateFilingExtras2__c</fullName>
                </value>
                <value>
                    <fullName>EMP_NUM__c</fullName>
                </value>
                <value>
                    <fullName>ts2__Social_Security__c</fullName>
                </value>
                <value>
                    <fullName>ts2__SSN1__c</fullName>
                </value>
                <value>
                    <fullName>FederalFilingExtras__c</fullName>
                </value>
                <value>
                    <fullName>FedTaxExemptions__c</fullName>
                </value>
                <value>
                    <fullName>StateTaxExemptions__c</fullName>
                </value>
                <value>
                    <fullName>StateTaxFiling1__c</fullName>
                </value>
                <value>
                    <fullName>StateExemptions2__c</fullName>
                </value>
                <value>
                    <fullName>StateTaxFiling2__c</fullName>
                </value>
                <value>
                    <fullName>MailingCity</fullName>
                </value>
                <value>
                    <fullName>MailingState</fullName>
                </value>
                <value>
                    <fullName>MailingCountry</fullName>
                </value>
                <value>
                    <fullName>MailingPostalCode</fullName>
                </value>
                <value>
                    <fullName>MailingStreet</fullName>
                </value>
                <value>
                    <fullName>DateHired__c</fullName>
                </value>
                <value>
                    <fullName>Home_Department__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modify_Date__c</fullName>
        <label>Modify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Filter__c</fullName>
        <formula>TODAY()  - DATEVALUE( Modify_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Update Record</label>
    <nameField>
        <displayFormat>CUR-{00000}</displayFormat>
        <label>Contact Update Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Update Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>